fixed gap

--- a/showmewhatyougot.scss
+++ b/showmewhatyougot.scss
@@ -464,10 +464,10 @@ footer a {
     .intro {
        
         display: grid;
-        gap: 10px;
+        //gap: 10px;
         justify-items: center;
         height:fit-content;
-        padding:10px; 
+       // padding:10px; 
         
    
 
@@ -514,10 +514,10 @@ footer a {
     #zen-supporting {
 
        
-        gap: 10px;
+       // gap: 10px;
         justify-items: center;
         height:fit-content;
-        padding:10px; 
+       // padding:10px; 
     
 
          & .explanation {
